--- a/src/Net_6.Website/appsettings.Development.json
+++ b/src/Net_6.Website/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Database": "Server=.\\;Database=Website;Trusted_Connection=True;"
+  },
+  "Authenticate": {
+
+  },
+  "AuthCookies": {
+    "LoginPath": "User/AdminLogin",
+    "TimeOut" : 30
   }
 }
