Thêm xóa sửa đối tượng

--- a/src/Net_6.Website/appsettings.Development.json
+++ b/src/Net_6.Website/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Server=.\\;Database=Website;Trusted_Connection=True;"
+    "Database": "Server=localhost;Database=Website;Trusted_Connection=True;TrustServerCertificate=true;"
   },
   "Authenticate": {
 
